--- a/WebCommon/project.json
+++ b/WebCommon/project.json
@@ -12,6 +12,9 @@
     "Newtonsoft.Json": "7.0.1",
     "WindowsAzure.Storage": "6.1.0",
     "EntityFramework.Commands": "7.0.0-beta8",
+    "Microsoft.AspNet.Http.Abstractions": "1.0.0-beta8",
+    "Microsoft.Framework.Configuration": "1.0.0-beta8",
+    "Microsoft.AspNet.Diagnostics": "1.0.0-beta8",
   },
 
   "frameworks": {
