--- a/WebCommon/Properties/launchSettings.json
+++ b/WebCommon/Properties/launchSettings.json
@@ -3,6 +3,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
+      "launchUrl": "web/flux.html",
       "environmentVariables": {
         "ASPNET_ENV": "Development"
       },
