--- a/WebCommon/project.json
+++ b/WebCommon/project.json
@@ -15,7 +15,7 @@
     "Microsoft.AspNet.Http.Abstractions": "1.0.0-beta8",
     "Microsoft.Framework.Configuration": "1.0.0-beta8",
     "Microsoft.AspNet.Diagnostics": "1.0.0-beta8",
-    "Microsoft.AspNet.StaticFiles": "1.0.0-beta8",
+    "Microsoft.AspNet.StaticFiles": "1.0.0-beta8"
   },
 
   "frameworks": {
