--- a/TheWeb/TheWeb.csproj
+++ b/TheWeb/TheWeb.csproj
@@ -55,6 +55,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="System.Net.Http" />
+    <Reference Include="System.Web.Abstractions" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -64,6 +65,7 @@
     <Reference Include="System.Core" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Web.Extensions" />
+    <Reference Include="System.Web.Routing" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Web" />
@@ -106,8 +108,8 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Global.asax" />
+    <None Include="JSON.json" />
     <Content Include="Web.config" />
-    <Content Include="wwwroot\app-test\testHome.js" />
     <Content Include="wwwroot\bs3\css\bootstrap-rtl.css" />
     <Content Include="wwwroot\bs3\css\_Bootstrap.css" />
     <Content Include="wwwroot\bs3\css\_Bootstrap.min.css" />
@@ -139,40 +141,13 @@
     <Content Include="wwwroot\Common\closure\cookies.js" />
     <Content Include="wwwroot\Common\closure\crypt.js" />
     <Content Include="wwwroot\Common\closure\sha1.js" />
-    <Content Include="wwwroot\Common\CsShared.js" />
-    <Content Include="wwwroot\Common\flux\flux.js" />
     <Content Include="wwwroot\Common\flux\Index.html" />
-    <Content Include="wwwroot\Common\flux\test.js" />
     <Content Include="wwwroot\Common\Layout\index.html" />
-    <Content Include="wwwroot\Common\Layout\Layout.js" />
-    <Content Include="wwwroot\Common\Layout\test.js" />
-    <Content Include="wwwroot\Common\lib\ajax.js" />
-    <Content Include="wwwroot\Common\lib\Common.js" />
-    <Content Include="wwwroot\Common\lib\encrypt.js" />
     <Content Include="wwwroot\Common\lib\index.html" />
-    <Content Include="wwwroot\Common\lib\oAuth-low.js" />
-    <Content Include="wwwroot\Common\lib\oauth.js" />
-    <Content Include="wwwroot\Common\lib\test.js" />
-    <Content Include="wwwroot\Common\login\auth.js" />
-    <Content Include="wwwroot\Common\login\dispatcher.js" />
     <Content Include="wwwroot\Common\login\index.html" />
-    <Content Include="wwwroot\Common\login\index.js" />
-    <Content Include="wwwroot\Common\login\test.js" />
-    <Content Include="wwwroot\Common\login\views\home-bs.js" />
-    <Content Include="wwwroot\Common\login\views\panel.js" />
-    <Content Include="wwwroot\Common\persist\persist.js" />
-    <Content Include="wwwroot\Common\persist\test.js" />
-    <Content Include="wwwroot\Common\uiRouter\angularCommon.js" />
     <Content Include="wwwroot\Common\uiRouter\index.html" />
-    <Content Include="wwwroot\Common\uiRouter\router.js" />
-    <Content Include="wwwroot\Common\uiRouter\routerCommon.js" />
-    <Content Include="wwwroot\Common\uiRouter\test.js" />
     <Content Include="wwwroot\Common\uiRouter\urlMatcherFactory.js" />
     <Content Include="wwwroot\Common\validation\Index.html" />
-    <Content Include="wwwroot\Common\validation\lib.js" />
-    <Content Include="wwwroot\Common\validation\templates-bs.js" />
-    <Content Include="wwwroot\Common\validation\templates-mdl.js" />
-    <Content Include="wwwroot\Common\validation\test.js" />
     <Content Include="wwwroot\deploy\oauth\mins\all.min.js" />
     <Content Include="wwwroot\deploy\web4\index-parts\edusoft.html" />
     <Content Include="wwwroot\deploy\web4\index-parts\grafia.html" />
@@ -211,7 +186,6 @@
     <Content Include="wwwroot\scripts\react-bootstrap.js" />
     <Content Include="wwwroot\scripts\react-dom.js" />
     <Content Include="wwwroot\scripts\react-with-addons.js" />
-    <Content Include="wwwroot\servConfig.js" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\AppConfig.cs" />
@@ -224,6 +198,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\System.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\web.config" />
@@ -234,14 +209,13 @@
     <Content Include="Views\home\OAuth.cshtml" />
     <Content Include="Views\home\Schools.cshtml" />
     <Content Include="Views\home\File.cshtml" />
-    <Content Include="swfiles.zip" />
+    <None Include="Properties\PublishProfiles\LMWebCommon - Web Deploy.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
     <None Include="Web.Release.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
-    <Content Include="wwwroot\app-test\testHome.js.map" />
     <Content Include="wwwroot\bs3\less\alerts.less" />
     <Content Include="wwwroot\bs3\less\badges.less" />
     <Content Include="wwwroot\bs3\less\bootstrap-externals.less" />
@@ -321,37 +295,10 @@
     <Content Include="wwwroot\bs3\less\variables.less" />
     <Content Include="wwwroot\bs3\less\wells.less" />
     <Content Include="wwwroot\Common\closure\js.dpl.json" />
-    <Content Include="wwwroot\Common\CsShared.js.map" />
-    <Content Include="wwwroot\Common\flux\flux.js.map" />
-    <Content Include="wwwroot\Common\flux\test.js.map" />
-    <Content Include="wwwroot\Common\Layout\Layout.js.map" />
-    <Content Include="wwwroot\Common\Layout\test.js.map" />
-    <Content Include="wwwroot\Common\lib\ajax.js.map" />
-    <Content Include="wwwroot\Common\lib\Common.js.map" />
-    <Content Include="wwwroot\Common\lib\encrypt.js.map" />
     <Content Include="wwwroot\Common\lib\js.dpl.json" />
-    <Content Include="wwwroot\Common\lib\oAuth-low.js.map" />
-    <Content Include="wwwroot\Common\lib\oauth.js.map" />
-    <Content Include="wwwroot\Common\lib\test.js.map" />
-    <Content Include="wwwroot\Common\login\auth.js.map" />
-    <Content Include="wwwroot\Common\login\dispatcher.js.map" />
-    <Content Include="wwwroot\Common\login\index.js.map" />
     <Content Include="wwwroot\Common\login\js.dpl.json" />
     <Content Include="wwwroot\Common\login\jsskin-bs.dpl.json" />
-    <Content Include="wwwroot\Common\login\test.js.map" />
-    <Content Include="wwwroot\Common\login\views\home-bs.js.map" />
-    <Content Include="wwwroot\Common\login\views\panel.js.map" />
-    <Content Include="wwwroot\Common\persist\persist.js.map" />
-    <Content Include="wwwroot\Common\persist\test.js.map" />
-    <Content Include="wwwroot\Common\uiRouter\angularCommon.js.map" />
     <Content Include="wwwroot\Common\uiRouter\js.dpl.json" />
-    <Content Include="wwwroot\Common\uiRouter\router.js.map" />
-    <Content Include="wwwroot\Common\uiRouter\routerCommon.js.map" />
-    <Content Include="wwwroot\Common\uiRouter\test.js.map" />
-    <Content Include="wwwroot\Common\validation\lib.js.map" />
-    <Content Include="wwwroot\Common\validation\templates-bs.js.map" />
-    <Content Include="wwwroot\Common\validation\templates-mdl.js.map" />
-    <Content Include="wwwroot\Common\validation\test.js.map" />
     <Content Include="wwwroot\deploy\oauth\js-all.dpl.json" />
     <Content Include="wwwroot\deploy\oauth\js.dpl.json" />
     <Content Include="wwwroot\deploy\oauth\jsmin.dpl.json" />
@@ -410,12 +357,11 @@
     <Content Include="wwwroot\font-awesome\lm\externals-bootsWatch-flatly.less" />
     <Content Include="wwwroot\font-awesome\lm\externals.less" />
     <Content Include="wwwroot\scripts\js.dpl.json" />
-    <Content Include="wwwroot\servConfig.js.map" />
     <Content Include="wwwroot\tsconfig.json" />
     <Content Include="wwwroot\Web.config" />
+    <Content Include="wwwroot\swfiles.zip" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="App_Data\" />
     <Folder Include="wwwroot\bs3\less\1pxdeep\" />
     <Folder Include="wwwroot\bs3\less\lavish\" />
   </ItemGroup>
@@ -466,7 +412,8 @@
     <TypeScriptCompile Include="wwwroot\scripts\typings\react\react-dom.d.ts" />
     <TypeScriptCompile Include="wwwroot\scripts\typings\react\react-global.d.ts" />
     <TypeScriptCompile Include="wwwroot\scripts\typings\react\react.d.ts" />
-    <TypeScriptCompile Include="wwwroot\servConfig.ts" />
+    <TypeScriptCompile Include="wwwroot\lmwebcommon-config.ts" />
+    <TypeScriptCompile Include="wwwroot\localhost-config.ts" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{4A0DDDB5-7A95-4FBF-97CC-616D07737A77}" />
