--- a/TheWebServices/Email/packages.config
+++ b/TheWebServices/Email/packages.config
@@ -4,5 +4,7 @@
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net451" />
-  <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net451" />
+  <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net451" />
+  <package id="Sendgrid" version="6.3.0" targetFramework="net451" />
+  <package id="SendGrid.SmtpApi" version="1.3.1" targetFramework="net451" />
 </packages>
